[gd_scene load_steps=6 format=3 uid="uid://bobfb8c57h6vj"]

[ext_resource type="Texture2D" uid="uid://f66m10vjjy2e" path="res://graphics/player/player.png" id="1_da8ju"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_td1ul"]
[ext_resource type="Texture2D" uid="uid://22wrof8g0tnu" path="res://graphics/decals/white.png" id="3_tqqjt"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gaxgm"]
lifetime_randomness = 0.21
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.35
spread = 45.994
initial_velocity_min = 400.0
initial_velocity_max = 400.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.4
color = Color(0.682353, 0.901961, 0.968627, 0.847059)

[sub_resource type="CircleShape2D" id="CircleShape2D_sorcv"]
radius = 62.0081

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_td1ul")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(130, 19)
emitting = false
amount = 38
process_material = SubResource("ParticleProcessMaterial_gaxgm")
texture = ExtResource("3_tqqjt")
lifetime = 0.1
one_shot = true
local_coords = true

[node name="PlayerSprite" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_da8ju")
offset = Vector2(0.143217, -37.1145)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_sorcv")

[node name="LaserCooldownTimer" type="Timer" parent="."]
wait_time = 0.191
one_shot = true

[node name="GranadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(131, 20)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 12)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(128, 27)

[connection signal="timeout" from="LaserCooldownTimer" to="." method="_on_laser_cooldown_timer_timeout"]
[connection signal="timeout" from="GranadeReloadTimer" to="." method="_on_granade_reload_timer_timeout"]
